style.css
/*@media (pointer: coarse) and (hover: none) {*/
/*    header {*/
/*        background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;*/
/*    }*/
/*    header video {*/
/*        display: none;*/
/*    }*/
/*}*/

body {
    position: relative;
}

nav {
    height: 75px;
}

select {

}
header {
    position: relative;
    background-color: black;
    height: 75vh;
    min-height: 25rem;
    width: 100%;
    overflow: hidden;
}

header video {
    position: absolute;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: 0;
    -ms-transform: translateX(-50%) translateY(-50%);
    -moz-transform: translateX(-50%) translateY(-50%);
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
}

header .container {
    position: relative;
    z-index: 2;
}

header .overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: black;
    opacity: 0.5;
    z-index: 1;
}

#map {
    /* the width and height may be set to any size */
    width: 50%;
    height: 600px;
    margin: 0 auto;
}

.btnLink {
    border: 0 !important;
}

.nav-link:hover {
    text-decoration: none;
    border: none;
}

.topButtons {
    border-radius: 50%;
    width: 135px;
    height: 135px;
    color: #2d334a;
    font-size: 23px;
    padding: 0;
}

.topButtons:hover {
    font-weight: bold;
}


.coffee {
    /*border: 1px solid #d4dbe3;*/
    width: 250px;
    height: 250px;
    border-radius: 25%;
    -webkit-transition: all 0.5s ease-in-out;
    -webkit-box-shadow: 10px 10px 5px #2d334a;
    box-shadow: 3px 4px 8px #2d334a;
}

#coffeeBagPic {
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    height: 150px;
    width: 100px;
}

.coffee:hover {
    -webkit-transform: scale(1.1);
}


#nav-img {
    height: 75px;
}
#myTab {
    border: none;
}

input[type=submit] {
    color: white;
    padding:5px 10px;
    background: #2d334a;
    border:0 none;
    cursor:pointer;
    -webkit-border-radius: 5px;
    border-radius: 5px;
}

input[type=text] {
    padding:8px;
    border:0;
    box-shadow: 3px 4px 8px #2d334a;
    border-radius:10px;
}

select {
    width: 200px;
    padding: 5px;
    border-radius:10px;
}

/*---------------FOOTER-------------------*/
footer {
    background: #2d334a;
    position: absolute;
    width: 100%;
    color: white;
}
#footer {
    min-width: 768px;
    width: 95%;
    max-width: 1400px;
    margin: 0 auto;
}

footer h1 {
    margin: 0;
    font-weight: bolder;
    text-align: center;
    font-size: 2em;
}
h5 {
    color: white;
    font-weight: 200;
}
footer a {
    color: white;
    text-decoration: none;
}
footer .icon-wrapper:hover,
footer .top-footer a:hover,
footer .bottom-footer a:hover {
    -webkit-transform: scale(1.1);
    color: white;
    text-decoration: none;
}
footer ul {
    list-style: none;
    margin: 0;
}
footer .container {
    padding: 1.5em 0;
    height: 15em;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}
.icon-wrapper {
    border: 2px solid grey;
    border-radius: 2.4em;
    height: 2.4em;
    width: 2.4em;
    display: flex;
    margin-bottom: 1em;
}
.icon-wrapper i {
    margin: auto;
}
.social-media-links {
    display: flex;
}
footer .top-footer a {
    text-transform: uppercase;
    font-weight: 200;
}

footer .bottom-footer a {
    margin: .3em;
}
.line {
    width: 100%;
    height: 1px;
    background: grey;
}
.top-footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: 'Montserrat', sans-serif;
}

.number_add {
    text-align: center;
}

.bf_bar_info {
    display: flex;
    font-family: 'Work Sans', sans-serif;
}

.bottom-footer ul li:nth-child(6) {
    margin-left: auto;
}

/*----END OF FOOTER CSS----*/

